# iChat-server

./: .gitignore  Cargo.toml  README.md  docker-compose-test.yml  docker-compose.yml  makefile  unit_test_init.sql
chat_core/: Cargo.toml
chat_notify/: Cargo.toml
chat_server/: Cargo.toml  ichat.test.toml  ichat.unit.test.toml
chat_server/src/: app_state.rs  config.rs  error.rs  main.rs
chat_server/src/handler/: chat.rs  mod.rs  user.rs
chat_server/src/middlewares/: auth.rs  mod.rs  request_id_to_response.rs
chat_server/src/models/: chat.rs  mod.rs
chat_server/src/mutation/: chat.rs  message.rs  mod.rs  user.rs
chat_server/src/notification/: mod.rs
chat_server/src/query/: chat.rs  file.rs  message.rs  mod.rs  user.rs
chat_server/src/repository/: chat.rs  message.rs  mod.rs  user.rs
chat_server/src/subscription/: mod.rs
chat_server/src/utils/: jwt.rs  mod.rs
migrations/: 20241010084836_init.sql
