[workspace]
members = ["chat_server", "chat_notify", "chat_core"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["http2", "query", "tracing", "multipart"] }
axum-extra = { version = "0.9.4", features = ["typed-header"]}
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "./chat_core" }
jwt-simple = "0.12.10"
serde = { version = "1.0.210", features = ["derive"]}
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
thiserror = "1.0.64"
toml = "0.8.19"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-full", "cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-graphql = { version = "7.0.11", features = ["default", "chrono"] }
async-graphql-axum = { version = "7.0.11" }
