[package]
name = "chat-notify"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
chat-core = { workspace = true }
jwt-simple = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["request-id"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
